k8s_bkp/02-postgres-account.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: account-db
  namespace: fintrack
spec:
  serviceName: account-db
  replicas: 1
  selector:
    matchLabels:
      app: account-db
  template:
    metadata:
      labels:
        app: account-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: manual
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: account-db
  namespace: fintrack
spec:
  clusterIP: None
  selector:
    app: account-db
  ports:
    - port: 5432
      targetPort: 5432
