k8s_bkp/12-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fintrack-ingress
  namespace: fintrack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: fintrack.local
      http:
        paths:
          - path: /api/auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /api/accounts(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: account-service
                port:
                  number: 80
          - path: /api/transactions(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: transaction-service
                port:
                  number: 80
